--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -79,6 +79,9 @@ jobs:
         run: docker-compose -f docker-compose.yml -f docker-compose.test.yml up -d --remove-orphans
 
       - name: List installed packages
+        run: docker-compose exec -T package bash -c "pip install -e .[testing]"
+
+      - name: List installed packages
         run: docker-compose exec -T package bash -c "pip freeze"
 
       - name: Run tests
