add requirements for new tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
     nose
     plotly
     matplotlib
+    networkx
 
 [options.packages.find]
 where = src
@@ -52,6 +53,7 @@ testing =
     lxml
     mock
     mypy
+    openpyxl
     pylama
     pylama_pylint
     black
