--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -4,6 +4,4 @@
 format: jb-book
 root: intro
 chapters:
-- file: markdown
-- file: notebooks
-- file: markdown-notebooks
+- file: examples/01_BasicActivity.ipynb
