--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -7,6 +7,7 @@ parts:
 - caption: Context
   chapters:
     - file: docs/AUTHORS.rst
+    - file: How_to_read_the_examples.rst
 - caption: Basics
   chapters:
     - file: Command_basics
@@ -18,24 +19,29 @@ parts:
     - file: examples/01_BasicActivity.ipynb
     - file: examples/02_MoveActivity.ipynb
     - file: examples/03_ShiftAmountActivity.ipynb
+- caption: Basics of cycles
+  chapters:
     - file: examples/04_SequenceActivity.ipynb
     - file: examples/05_WhileActivity.ipynb
     - file: examples/06_RepeatActivity.ipynb    
-    - file: examples/14_SingleRun.ipynb    
-- caption: More complex simulation
-  chapters:
-    - file: examples/07_WhileActivity_with_ShiftAmount.ipynb
     - file: examples/08_ParallelActivity.ipynb
+    - file: examples/07_WhileActivity_with_ShiftAmount.ipynb
+    - file: examples/14_SingleRun.ipynb    
     - file: examples/09_wrapped_single_run_process.ipynb
+- caption: More complex simulations
+  chapters:
     - file: examples/10_MultiContainer.ipynb
     - file: examples/11_Process_synchronization.ipynb
     - file: examples/12_Complex_synchronization.ipynb
     - file: examples/13_Resource_synchronization.ipynb
     - file: examples/15_Subcycle.ipynb
-- caption: Advanced simulation
-  chapters:
-    - file: examples/16_Feeder.ipynb
+- caption: Working with plugins
+  chapter
     - file: examples/17_SingleRun_with_WeatherCriterion.ipynb
     - file: examples/18_SingleRun_with_HasDelayPlugin.ipynb
+
+- caption: Real world examples
+  chapters:
+    - file: examples/16_Feeder.ipynb
     - file: examples/23_Simple_feeder_process_MC.ipynb
     - file: examples/24_cutters and barges.ipynb
