--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,8 +1,8 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
-author: The Jupyter Book Community
+title: OpenCLSim
+author: Mark van Koningsveld, Fedor Baart, Pieter van Halem, Gerben de Boer
 logo: logo.png
 
 # Force re-execution of notebooks on each build.
