--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -14,12 +14,12 @@ parts:
       title: Command Prompt
     - file: Anaconda_basics
       title: Anaconda
-- caption: Basics of OpenCLSim
+- caption: Basic activities
   chapters:
     - file: examples/01_BasicActivity.ipynb
     - file: examples/02_MoveActivity.ipynb
     - file: examples/03_ShiftAmountActivity.ipynb
-- caption: Basics of cycles
+- caption: Basic cycles
   chapters:
     - file: examples/04_SequenceActivity.ipynb
     - file: examples/05_WhileActivity.ipynb
@@ -28,7 +28,7 @@ parts:
     - file: examples/07_WhileActivity_with_ShiftAmount.ipynb
     - file: examples/14_SingleRun.ipynb    
     - file: examples/09_wrapped_single_run_process.ipynb
-- caption: More complex simulations
+- caption: More complex cycles
   chapters:
     - file: examples/10_MultiContainer.ipynb
     - file: examples/11_Process_synchronization.ipynb
