add ipywidgets for plotly support

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,8 @@ testing =
     pytest-datadir
     pytest-timeout
     pytest-split
+    ipywidgets
+    notebook
     jupyter
     jupyter-book
     simplekml
