--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,8 @@ exclude =
 
 # Add here test requirements (semicolon/line-separated)
 testing =
-    coverage-badge
+    flake8==4.0.0
+	coverage-badge
     faker
     lxml
     mock
