fix some versions that are causing issues with deps resolver

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,10 +68,10 @@ testing =
     pytest-datadir
     pytest-timeout
     pytest-split
-    ipywidgets
-    notebook
-    jupyter
-    jupyter-book
+    ipywidgets==7.6.5
+    notebook==6.4.12
+    jupyter==1.0.0
+    jupyter-book==0.13.1
     simplekml
 docs =
     sphinx>=1.8.0
