try and fix readme @ pypi

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ keywords =OpenCLSim
 license = MIT
 home-page = https://github.com/TUDelft-CITG/openclsim
 description-file = README.md
+long_description_content_type=text/markdown
 classifiers =
     Development Status :: 4 - Beta
     Programming Language :: Python
