--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
     importlib-metadata; python_version<"3.8"
     pandas>=0.24.0
     numpy
+    networkx
     simpy
     shapely
     pyproj
