--- a/setup.cfg
+++ b/setup.cfg
@@ -33,9 +33,9 @@ install_requires =
     simpy
     shapely
     pyproj
-    nose
     plotly
     matplotlib
+    networkx
 
 [options.packages.find]
 where = src
@@ -50,6 +50,7 @@ exclude =
 # Add here test requirements (semicolon/line-separated)
 testing =
     coverage-badge
+    nose
     faker
     lxml
     mock
