--- a/setup.cfg
+++ b/setup.cfg
@@ -34,9 +34,9 @@ install_requires =
     simpy
     shapely
     pyproj
-    nose
     plotly
     matplotlib
+    networkx
 
 [options.packages.find]
 where = src
@@ -51,6 +51,7 @@ exclude =
 # Add here test requirements (semicolon/line-separated)
 testing =
     coverage-badge
+    nose
     faker
     lxml
     mock
