this package has both setup.py and pyproject.toml, making sure packages are installed with both paths

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ package_dir =
 
 install_requires =
     importlib-metadata; python_version<"3.8"
+    setuptools_scm[toml]>=5
     pandas>=0.24.0
     numpy
     networkx
