make sure we use new setuptools in combination with scm

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ package_dir =
     =src
 
 install_requires =
+    setuptools>=61
     importlib-metadata; python_version<"3.8"
     setuptools_scm[toml]>=5
     pandas>=0.24.0
