--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ author_email = "m.vankoningsveld@tudelft.nl",
 summary = The OpenCLSim package aims to facilitate rule based planning of cyclic activities and in depth comparison of different system concepts.
 keywords = OpenCLSim
 license = MIT
-home-page = https://github.com/TUDelft-CITG/openclsim
+home_page = https://github.com/TUDelft-CITG/openclsim
 description-file = README.md
 long_description_content_type = text/markdown
 description_content_type = text/markdown
