--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ summary = The OpenCLSim package aims to facilitate rule based planning of cyclic
 keywords = OpenCLSim
 license = MIT
 home_page = https://github.com/TUDelft-CITG/openclsim
-description-file = README.md
+description_file = README.md
 long_description_content_type = text/markdown
 description_content_type = text/markdown
 classifiers =
