--- a/setup.cfg
+++ b/setup.cfg
@@ -54,33 +54,34 @@ exclude =
 
 # Add here test requirements (semicolon/line-separated)
 testing =
+    black
     coverage-badge
-    nose
     faker
+    flake8<5
+    ipywidgets==7.6.5
+    jupyter-book==0.13.1
+    jupyter==1.0.0
     lxml
     mock
     mypy
+    nbmake
+    nose
+    notebook==6.4.12
     plotly
     pylama
     pylama_pylint
-    black
     pytest
     pytest-black
     pytest-cov
-    flake8<5
+    pytest-datadir
     pytest-flake8
     pytest-isort
     pytest-logging
+    pytest-mock
     pytest-mypy
     pytest-runner
-    pytest-mock
-    pytest-datadir
-    pytest-timeout
     pytest-split
-    ipywidgets==7.6.5
-    notebook==6.4.12
-    jupyter==1.0.0
-    jupyter-book==0.13.1
+    pytest-timeout
     simplekml
 docs =
     sphinx>=1.8.0
