add opentnsim dep during testing for integration test

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,8 @@ testing =
     nbmake
     nose
     notebook==6.4.12
+    # for integration test in notebook
+    opentnsim
     plotly
     pylama
     pylama_pylint
