--- a/setup.cfg
+++ b/setup.cfg
@@ -58,15 +58,15 @@ testing =
     coverage-badge
     faker
     flake8<5
-    ipywidgets==7.6.5
-    jupyter-book==0.13.1
-    jupyter==1.0.0
+    ipywidgets>=7
+    jupyter-book>=0.13.1
+    jupyter>=1.0.0
     lxml
     mock
     mypy
     nbmake
     nose
-    notebook==6.4.12
+    notebook>=6.4.12
     # for integration test in notebook
     opentnsim
     plotly
