missing test dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,7 @@ testing =
     coverage-badge
     faker
     flake8<5
+    folium
     ipywidgets>=7
     jupyter-book>=0.13.1
     jupyter>=1.0.0
