--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,7 @@ exclude =
 testing =
     black
     coverage-badge
+    contextily
     faker
     flake8<5
     folium
@@ -86,6 +87,7 @@ testing =
     pytest-split
     pytest-timeout
     simplekml
+    
 docs =
     sphinx>=1.8.0
     sphinx_rtd_theme
