handle list field types in json

--- a/setup.cfg
+++ b/setup.cfg
@@ -71,6 +71,8 @@ testing =
     notebook>=6.4.12
     # for integration test in notebook
     opentnsim
+    # loading json with list features
+    pyarrow
     plotly
     pylama
     pylama_pylint
