--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,11 @@ testing = [
     "pyyaml >=6.0.2",
     "sphinx-rtd-theme >= 3.0.2",
     "black >=25.9.0",
+    "opentnsim >=1.3.7",
+    "contextily >=1.6.2",
+    "pyarrow >=21.0.0",
+    "folium >=0.20.0",
+
 ]
 
 [project.scripts]
